pod-security/baseline/disallow-proc-mount/disallow-proc-mount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-proc-mount
  annotations:
    policies.kyverno.io/title: Disallow procMount
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.nirmata.io/remediation-docs: "https://docs.nirmata.io/policysets/podsecurity/baseline/disallow-proc-mount/"
    policies.kyverno.io/standards: "cis-eks,cis-kubernetes,cis-aks,cis-gke,nsa-cisa,nist-800-53"
    policies.nirmata.io/nsa-cisa-control: "Sec.1.4"
    policies.nirmata.io/nist-800-53-control: "CM-7"
    policies.kyverno.io/description: >-
      The default /proc masks are set up to reduce attack surface and should be required. This policy
      ensures nothing but the default procMount can be specified for the fields fields
      spec.containers[*].securityContext.procMount, spec.initContainers[*].securityContext.procMount,
      and spec.ephemeralContainers[*].securityContext.procMount. Note that in order for users
      to deviate from the `Default` procMount requires setting a feature gate at the API
      server.
    policies.nirmata.io/remediation: "https://github.com/nirmata/kyverno-policies/tree/main/pod-security/baseline/disallow-proc-mount/remediate-disallow-proc-mount-containers.yaml"
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: check-proc-mount
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: >-
          Changing the proc mount from the default is not allowed.
        pattern:
          spec:
            =(ephemeralContainers):
              - =(securityContext):
                  =(procMount): "Default"
            =(initContainers):
              - =(securityContext):
                  =(procMount): "Default"
            containers:
              - =(securityContext):
                  =(procMount): "Default"
